Set jvm args for test task